<resources>
    <string name="app_name">MySetup</string>
    <string name="add_new">Add new bike</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="filter">Filter</string>
    <string name="title_filter">Filter your setups</string>
    <string name="accept">Accept</string>
    <string name="wetness">Track wetness</string>
    <string name="slope">Track slope</string>
    <string name="rough">Track roughness</string>
    <string name="edit">Edit</string>
    <string name="background">Exploded bike as a background</string>
    <string name="damper">Rear suspension</string>
    <string name="fork">Front suspension</string>
    <string name="rTire">Rear tire</string>
    <string name="fTire">Front tire</string>
    <string name="dry">Dry</string>
    <string name="semidry">Semidry</string>
    <string name="wet">Wet</string>
    <string name="downhill">Downhill</string>
    <string name="allmountain">All-mountain</string>
    <string name="uphill">Uphill</string>
    <string name="flow">Flow</string>
    <string name="mixed">Mixed</string>
    <string name="rough2">Rough</string>
    <string name="pModel">Part model</string>
    <string name="value">Value of setting</string>
    <string name="mirror">Mirror</string>

    <string name="title_activity_setup">TAS</string>
</resources>