<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layoutDescription="@xml/popup_filter_setup_scene">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_title_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/title_filter"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_wetness_filter"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:showText="false"
            android:splitTrack="false"
            android:text="@string/wetness"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/text_title_filter"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title_filter" />

        <ImageView
            android:id="@+id/image_dry2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar_wetness_filter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_wetness_filter"
            app:srcCompat="@drawable/transparent_water_drop_empty"
            android:contentDescription="@string/dry" />

        <ImageView
            android:id="@+id/image_semiwet2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar_wetness_filter"
            app:layout_constraintEnd_toStartOf="@+id/image_wet2"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toEndOf="@+id/image_dry2"
            app:layout_constraintTop_toBottomOf="@+id/switch_wetness_filter"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/transparent_water_drop_half"
            android:contentDescription="@string/semidry" />

        <ImageView
            android:id="@+id/image_wet2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar_wetness_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_wetness_filter"
            app:srcCompat="@drawable/transparent_water_drop_full"
            android:contentDescription="@string/wet" />

        <SeekBar
            android:id="@+id/seekBar_wetness_filter"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="12dp"
            android:max="2"
            android:progress="1"
            app:layout_constraintEnd_toEndOf="@+id/switch_wetness_filter"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/switch_wetness_filter"
            app:layout_constraintTop_toBottomOf="@+id/switch_wetness_filter" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_slope_filter"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:text="@string/slope"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/switch_wetness_filter"
            app:layout_constraintStart_toStartOf="@+id/switch_wetness_filter"
            app:layout_constraintTop_toBottomOf="@+id/seekBar_wetness_filter" />

        <ImageView
            android:id="@+id/image_uphill2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_allmountain2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_slope_filter"
            app:srcCompat="@drawable/transparent_uphill"
            android:contentDescription="@string/uphill" />

        <ImageView
            android:id="@+id/image_allmountain2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar_slope_filter"
            app:layout_constraintEnd_toStartOf="@+id/image_downhill2"
            app:layout_constraintStart_toEndOf="@+id/image_uphill2"
            app:layout_constraintTop_toBottomOf="@+id/switch_slope_filter"
            app:srcCompat="@drawable/transparent_allmountain"
            android:contentDescription="@string/allmountain" />

        <ImageView
            android:id="@+id/image_downhill2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_allmountain2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_slope_filter"
            app:srcCompat="@drawable/transparent_downhill"
            android:contentDescription="@string/downhill" />

        <SeekBar
            android:id="@+id/seekBar_slope_filter"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="12dp"
            android:max="2"
            android:progress="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_slope_filter" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_roughness_filter"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/rough"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/switch_slope_filter"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar_slope_filter" />

        <ImageView
            android:id="@+id/image_mixed2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar_roughness_filter"
            app:layout_constraintEnd_toStartOf="@+id/image_rough2"
            app:layout_constraintStart_toEndOf="@+id/image_mellow2"
            app:layout_constraintTop_toBottomOf="@+id/switch_roughness_filter"
            app:srcCompat="@drawable/transparent_mixed"
            android:contentDescription="@string/mixed" />

        <ImageView
            android:id="@+id/image_rough2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="9dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_mixed2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_roughness_filter"
            app:srcCompat="@drawable/transparent_rough"
            android:contentDescription="@string/rough2" />

        <ImageView
            android:id="@+id/image_mellow2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/image_mixed2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_roughness_filter"
            app:srcCompat="@drawable/transparent_mellow"
            android:contentDescription="@string/flow" />

        <SeekBar
            android:id="@+id/seekBar_roughness_filter"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="12dp"
            android:max="2"
            android:progress="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_roughness_filter" />

        <Button
            android:id="@+id/button_filter_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/accept"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar_roughness_filter" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>