<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ActivitySetup_ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SetupActivity" >

    <TextView
        android:id="@+id/ActivitySetup_TextView_SetupName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="80dp"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/ActivitySetup_Button_RearSuspension"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ActivitySetup_ImageView_Background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/explodedraaw"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/explodedraaw"
        android:contentDescription="@string/background" />

    <Button
        android:id="@+id/ActivitySetup_Button_RearSuspension"
        android:layout_width="84dp"
        android:layout_height="90dp"
        android:backgroundTint="#4DFFFFFF"
        android:text="@string/damper"
        android:textColor="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/ActivitySetup_Button_FrontSuspension"
        app:layout_constraintEnd_toStartOf="@+id/ActivitySetup_Button_FrontSuspension"
        app:strokeColor="@color/HollywoodCerise"
        app:strokeWidth="4dp" />

    <Button
        android:id="@+id/ActivitySetup_Button_FrontSuspension"
        android:layout_width="84dp"
        android:layout_height="90dp"
        android:backgroundTint="#4DFFFFFF"
        android:text="@string/fork"
        android:textColor="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ActivitySetup_ImageView_Background"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/HollywoodCerise"
        app:strokeWidth="4dp" />

    <Button
        android:id="@+id/ActivitySetup_Button_FrontTire"
        android:layout_width="84dp"
        android:layout_height="90dp"
        android:backgroundTint="#4DFFFFFF"
        android:text="@string/fTire"
        android:textColor="#00FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/ActivitySetup_Button_FrontSuspension"
        app:layout_constraintTop_toBottomOf="@+id/ActivitySetup_Button_FrontSuspension"
        app:strokeColor="@color/HollywoodCerise"
        app:strokeWidth="4dp" />

    <Button
        android:id="@+id/ActivitySetup_Button_RearTire"
        android:layout_width="84dp"
        android:layout_height="90dp"
        android:backgroundTint="#4DFFFFFF"
        android:text="@string/rTire"
        android:textColor="#00FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/ActivitySetup_Button_FrontSuspension"
        app:layout_constraintTop_toBottomOf="@+id/ActivitySetup_Button_FrontTire"
        app:strokeColor="@color/HollywoodCerise"
        app:strokeWidth="4dp" />

    <Button
        android:id="@+id/ActivitySetup_Button_Delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>