<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PopupAddNewBike_LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/PopupAddNewBike_ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/PopupAddNewBike_EditText_BikeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="Name"
            android:ems="10"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/PopupAddNewBike_Button_Add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/add"
            android:textSize="34sp"
            app:layout_constraintEnd_toStartOf="@+id/PopupAddNewBike_Button_Cancel"
            app:layout_constraintTop_toBottomOf="@+id/PopupAddNewBike_EditText_BikeName" />

        <Button
            android:id="@+id/PopupAddNewBike_Button_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cancel"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PopupAddNewBike_EditText_BikeName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>